Changelog für AB 3.70 02/04

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+AB 3.70 02/04
+---------------------------------------------------------------------------------------------------
+
+Fehlerkorrekturen
+- ProductLineItem/QuantityFactor1-4 wurde beim PUT von Belegen nicht korrekt berücksichtigt.
+
 AB 3.70 02/03
 ---------------------------------------------------------------------------------------------------
 
